; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/vt/extr_keyboard.c_vt_get_leds.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/vt/extr_keyboard.c_vt_get_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kbd_struct = type { i32 }

@kbd_table = common dso_local global %struct.kbd_struct* null, align 8
@led_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vt_get_leds(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.kbd_struct*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load %struct.kbd_struct*, %struct.kbd_struct** @kbd_table, align 8
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.kbd_struct, %struct.kbd_struct* %8, i64 %10
  store %struct.kbd_struct* %11, %struct.kbd_struct** %5, align 8
  %12 = load i64, i64* %7, align 8
  %13 = call i32 @spin_lock_irqsave(i32* @led_lock, i64 %12)
  %14 = load %struct.kbd_struct*, %struct.kbd_struct** %5, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @vc_kbd_led(%struct.kbd_struct* %14, i32 %15)
  store i32 %16, i32* %6, align 4
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @spin_unlock_irqrestore(i32* @led_lock, i64 %17)
  %19 = load i32, i32* %6, align 4
  ret i32 %19
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @vc_kbd_led(%struct.kbd_struct*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
